--- a/control
+++ b/control
@@ -1,8 +1,8 @@
 Package: com.henrikssonbrothers.noupdaterequiredavanza
 Name: NoUpdateRequiredAvanza
-Version: 0.0.1
+Version: 1.0.0
 Architecture: iphoneos-arm
-Description: An awesome MobileSubstrate tweak!
+Description: Allow older version of Avanza's app
 Maintainer: Christoffer Wigforss
 Author: Christoffer Wigforss
 Section: Tweaks
